force-app/main/default/objects/integration__c/integration__c.object-meta.xml
<CustomObject>
    <label>integration</label>
    <nameField>
        <label>integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>