force-app/main/default/objects/integration__c/fields/cityField__c.field-meta.xml
<CustomField>
    <fullName>cityField__c</fullName>
    <label>cityField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>