force-app/main/default/objects/integration__c/fields/countryField__c.field-meta.xml
<CustomField>
    <fullName>countryField__c</fullName>
    <label>countryField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>