force-app/main/default/objects/integration__c/fields/dateTimeField__c.field-meta.xml
<CustomField>
    <fullName>dateTimeField__c</fullName>
    <label>dateTimeField</label>
    <type>DateTime</type>
</CustomField>