force-app/main/default/objects/integration__c/fields/ipField__c.field-meta.xml
<CustomField>
    <fullName>ipField__c</fullName>
    <label>ipField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>