force-app/main/default/objects/integration__c/fields/regionField__c.field-meta.xml
<CustomField>
    <fullName>regionField__c</fullName>
    <label>regionField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>