force-app/main/default/objects/integration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ipField__c</columns>
    <columns>cityField__c</columns>
    <columns>regionField__c</columns>
    <columns>countryField__c</columns>
    <columns>dateTimeField__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>